order categories alphabetically

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,18 @@
 <h2>Categories</h2>
 
-<% @categories.each do |category| %>
-<ul>
-  <li> <%= category.name %></li>
+<div class="categories">
+
+  <ul class="categories-overview">
+    <% @categories.each do |category| %>
+      <li> <%= category.name %></li>
+      <% end %>
+  </ul>
+
+</div>
+
+  <%= form_for(:category, url: categories_path, method: "post") do |f| %>
+    <%= f.label :name, "Name" %>
+    <%= f.text_field :name %>
+
+    <%= f.submit "Create" %>
   <% end %>
-</ul>
-
-<%= form_for(:category, url: categories_path, method: "post") do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-
-  <%= f.submit "Create" %>
-<% end %>
