--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
 <h1>All The Time</h1>
+
+<% if current_user %>
+
+<div class="row add-entry">
+  <%= link_to "Add Entry", new_entry_path, class:"btn btn-primary" %>
+</div>
+
+<% end %>
