--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -3,6 +3,12 @@
   <%= f.label :value, "Time (minutes)"%>
   <%= f.text_field :value %>
 
+  <%= f.label :date, "Date" %>
+  <%= date_field(:entry, :date, value: Time.now.try(:strftime, '%Y-%m-%d')) %>
+
+  <%= f.label :category, "Category" %>
+  <%= f.collection_select(:category_id, @categories, :id, :name ) %>
+
   <%= f.label :description, "Description" %>
   <%= f.text_field :description %>
 
