--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,16 @@
 
 <% if current_user %>
 
+<div class="row">
+  <h3>View Reports</h3>
+    <h5>Select An End Date for Your Reports</h5>
+      <%= form_tag("/reports", method: "get") do %>
+        <%= label_tag(:q, "End Date") %>
+        <%= date_field(:q, :date, value: Date.today.try(:strftime, '%Y-%m-%d')) %>
+        <%= submit_tag("Get Reports")%>
+      <% end %>
+</div>
+
 <div class="row add-entry">
   <%= link_to "Add Entry", new_entry_path, class:"btn btn-primary" %>
 </div>
