--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? && current_user.org_admin %>
+              <li class='navbar-text'><%= link_to "Organization Reports", organization_path(current_user.organization_id) %></li>
+            <% end %>
+
             <% if user_signed_in? %>
               <li class='navbar-text'>Logged in as <%= current_user.email %></li>
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
