--- a/app/views/organizations/reports/index.html.erb
+++ b/app/views/organizations/reports/index.html.erb
@@ -1,5 +1,30 @@
 <h1>Organization Time Reports</h1>
 
-<% @org_users.each do |u|%>
-  <%= u.email %>
-<% end %>
+<div class="user-activity-daily">
+
+  <h2>Daily User Activity</h2>
+
+  <table class='table'>
+    <thead>
+      <tr>
+        <th>User</th>
+        <th>Category</th>
+        <th>Time (minutes)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users_with_entries.each do |user| %>
+        <tr>
+          <td><%= user.email %></td>
+            <% user.categories_times_day(@end_date).each do |key, value| %>
+              <td><%= Category.find(key).name %></td>
+              <td><%= value %></td>
+            <% end %>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+
+</div>
