top padding for add entry button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,8 @@
    background-color: #EDF4F9;
    color: #060524;
    font-family: "Helvetica",Helvetica,Arial,sans-serif;
-
-
  }
+
  h1 {
    text-align: center;
    font-size: 50px;
@@ -31,4 +30,8 @@
  .navbar {
   background-color: #060524;
   color: white;
+}
+
+.add-entry {
+  padding-top: 30px;
 }
