style forms on add entry page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,18 @@
   color: white;
 }
 
+.bold-header {
+  font-weight: bold;
+}
 .add-entry {
   padding-top: 30px;
+}
+
+.add-category {
+  padding-top: 50px;
+}
+
+.btn-custom {
+  background-color: #060524;
+  color: white;
 }
