--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -24,7 +24,7 @@
   <%= f.text_field :description %>
 </div>
 
-  <%= f.submit "Create", class: "btn btn-custom btn-xs" %>
+  <%= f.submit "Create Entry", class: "btn btn-custom btn-sm" %>
   <% end %>
 
 </div>
@@ -40,7 +40,7 @@
       <%= f.text_field :name, class: "input-group" %>
     </div>
 
-      <%= f.submit "Create", class: "btn btn-custom btn-xs" %>
+      <%= f.submit "Create Category", class: "btn btn-custom btn-xs" %>
     <% end %>
   </div>
 </div>
